--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "4.0.3",
     "styled-components": "^5.2.1",
     "styled-reset": "^4.3.4",
+    "tig": "^0.1.43",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
